--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,25 @@
-language: cpp
-sudo: required
 dist: bionic
+sudo: required
+language: cpp
 compiler:
   - clang
   - gcc
 os:
   - linux
 
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - wget
+      - pkg-config
+      
 before install:
-  - sudo apt update -qq
-  - sudo apt install curl -y
-  - curl https://bazel.build/bazel-release.pub.gpg | sudo apt-key add -
-echo "deb [arch=amd64] https://storage.googleapis.com/bazel-apt stable jdk1.8" | sudo tee /etc/apt/sources.list.d/bazel.list
-
-install:
-  - sudo apt install -y bazel
+  - wget https://github.com/bazelbuild/bazel/releases/download/3.1.0/bazel_3.1.0-linux-x86_64.deb
+  - sha256sum -c Tools/bazel_3.1.0-linux-x86_64.deb.sha256
+  - sudo dpkg -i bazel_3.1.0-linux-x86_64.deb
 
 script:
   - cd CMake && mkdir build && cd build && cmake .. && cmake --build . -- -j2
   - cd ../../Bazel && bazel build //:main
-  
