Adjust Bazel files to work with Nlohmann

--- a/Bazel/Main/BUILD.bazel
+++ b/Bazel/Main/BUILD.bazel
@@ -15,6 +15,7 @@ cc_test(
     tags = ["test"],
     deps = [
         ":awesome_class",
+        "@Nlohmann//:nlohmann_json_parser",
         "@googletest//:gtest",
     ],
 )
