--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,7 +26,7 @@
             }
         ]
     },
-    "editor.formatOnSave": true,
+    "editor.formatOnSave": false,
     "clang-format.executable": "/usr/bin/clang-format",
     "files.associations": {
         "array": "cpp",
@@ -83,5 +83,6 @@
     },
     "catch2TestExplorer.executables": [
         "bazel-out/k8-fastbuild/bin/Main/LinearRegression/linear_regression_utils_test"
-    ]
+    ],
+    "cmake.configureOnOpen": false
 }
