Add spdlog library and remove it as github submodule

--- a/Bazel/Main/BUILD.bazel
+++ b/Bazel/Main/BUILD.bazel
@@ -24,5 +24,6 @@ cc_test(
         "@asiolib//:asio",
         "@fmtlib//:fmt",
         "@googletest//:gtest",
+        "@spdloglib//:spdlog"
     ],
 )
