--- a/Bazel/WORKSPACE
+++ b/Bazel/WORKSPACE
@@ -19,3 +19,8 @@ local_repository(
     name = "Nlohmann",
     path = "../ThirdParty/Nlohmann/",
 )
+
+local_repository(
+    name = "spdloglib",
+    path = "../ThirdParty/spdlog/",
+)
