--- a/.travis.yml
+++ b/.travis.yml
@@ -19,11 +19,14 @@ addons:
       - pkg-config
       
 before install:
-  - sed -i 's/git@github.com:/https:\/\/github.com\//' .gitmodules
-  - git submodule update --init --recursive
-  - wget https://github.com/bazelbuild/bazel/releases/download/3.1.0/bazel_3.1.0-linux-x86_64.deb
-  - sha256sum -c Tools/bazel_3.1.0-linux-x86_64.deb.sha256
-  - sudo dpkg -i bazel_3.1.0-linux-x86_64.deb
+  # - sed -i 's/git@github.com:/https:\/\/github.com\//' .gitmodules
+  # - git submodule update --init --recursive
+  - mkdir temp && cd temp
+  - wget https://github.com/bazelbuild/bazel/releases/download/3.6.0/bazel_3.6.0-linux-x86_64.deb
+  - wget https://github.com/bazelbuild/bazel/releases/download/3.6.0/bazel_3.6.0-linux-x86_64.deb.sha256
+  - sha256sum -c bazel_3.6.0-linux-x86_64.deb.sha256
+  - sudo dpkg -i bazel_3.6.0-linux-x86_64.deb
+  - cd .. && rm -rf temp
 
 script:
   - cd CMake && mkdir build && cd build && cmake .. && cmake --build . -- -j2
