--- a/Bazel/Main/BUILD.bazel
+++ b/Bazel/Main/BUILD.bazel
@@ -1,3 +1,5 @@
+load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary", "cc_test")
+
 cc_binary(
     name = "main",
     srcs = ["main.cpp"],
@@ -24,6 +26,6 @@ cc_test(
         "@asiolib//:asio",
         "@fmtlib//:fmt",
         "@googletest//:gtest",
-        "@spdloglib//:spdlog"
+        # "@spdloglib//:spdlog"
     ],
 )
